refactor: use paginated searchIds method in upgrader